[gd_scene load_steps=13 format=3 uid="uid://bfxa5pid3lbdu"]

[ext_resource type="Script" uid="uid://d3w22ngjvl3fh" path="res://scripts/entities/player/player.gd" id="1_08t41"]
[ext_resource type="PackedScene" uid="uid://b0gob3vo1d03d" path="res://scenes/ui/crosshair.tscn" id="2_5u6hq"]
[ext_resource type="PackedScene" uid="uid://dscmtqfahp8dv" path="res://scenes/ui/info_panel.tscn" id="2_42nxq"]
[ext_resource type="PackedScene" uid="uid://cndiwhcn4w421" path="res://scenes/ui/hotbar.tscn" id="3_1ie0h"]
[ext_resource type="PackedScene" uid="uid://gqnw4wg66ygh" path="res://scenes/ui/inventory.tscn" id="4_42nxq"]
[ext_resource type="PackedScene" uid="uid://dhrpv57y4f84o" path="res://scenes/ui/health_bar.tscn" id="4_ss7kx"]
[ext_resource type="PackedScene" uid="uid://dt6ok5fgnxgr2" path="res://scenes/ui/floating_item.tscn" id="6_d4qa6"]
[ext_resource type="PackedScene" uid="uid://22pjlktle5o1" path="res://scenes/ui/pause_menu.tscn" id="8_dnykm"]

[sub_resource type="BoxShape3D" id="BoxShape3D_08t41"]
size = Vector3(0.7, 1.8, 0.7)

[sub_resource type="BoxMesh" id="BoxMesh_08t41"]
size = Vector3(0.7, 1.8, 0.7)

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_dnykm"]
exposure_multiplier = 0.75

[sub_resource type="GDScript" id="GDScript_1ie0h"]
script/source = "extends CanvasLayer


func _process(_delta: float) -> void:
	%FloatingItem.global_position = %FloatingItem.get_global_mouse_position() - Vector2(5,5)
	
	
	



#end
"

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_08t41")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_08t41")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_08t41")

[node name="FirstPersonCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
attributes = SubResource("CameraAttributesPractical_dnykm")
current = true
fov = 37.849285

[node name="InteractionRaycast" type="RayCast3D" parent="FirstPersonCamera"]
target_position = Vector3(0, 0, -5)

[node name="ThirdPersonCamera" type="Camera3D" parent="FirstPersonCamera"]
transform = Transform3D(1, 0, 0, 0, 0.8660254, 0.5, 0, -0.5, 0.8660254, 0, 1.9999999, 3.1727185)

[node name="Crosshair" parent="FirstPersonCamera" instance=ExtResource("2_5u6hq")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="UI" type="CanvasLayer" parent="."]
script = SubResource("GDScript_1ie0h")

[node name="HealthBar" parent="UI" instance=ExtResource("4_ss7kx")]
custom_minimum_size = Vector2(250, 50)
anchors_preset = -1
anchor_left = 0.275
anchor_top = 0.75
anchor_right = 0.425
anchor_bottom = 0.8
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -465.0
offset_top = -483.0
offset_right = 465.0
offset_bottom = 483.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Inventory" parent="UI/VBoxContainer" instance=ExtResource("4_42nxq")]
layout_mode = 2

[node name="Hotbar" parent="UI" instance=ExtResource("3_1ie0h")]
anchors_preset = -1
anchor_top = 0.9
anchor_bottom = 0.9
offset_left = -450.0
offset_top = -100.0
offset_right = 450.0
offset_bottom = 0.0
grow_vertical = 0
size_flags_horizontal = 4

[node name="FloatingItem" parent="UI" instance=ExtResource("6_d4qa6")]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -466.0
offset_top = -25.0
offset_right = -416.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="InfoPanel" parent="UI" instance=ExtResource("2_42nxq")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 932.0
offset_bottom = 77.0
grow_horizontal = 1
grow_vertical = 1

[node name="Pause Menu" parent="UI" instance=ExtResource("8_dnykm")]
visible = false

[connection signal="slot_clicked" from="UI/VBoxContainer/Inventory" to="." method="_on_inventory_slot_clicked"]
[connection signal="selected_item_changed" from="UI/Hotbar" to="." method="_on_hotbar_selected_item_changed"]
[connection signal="slot_clicked" from="UI/Hotbar" to="." method="_on_hotbar_slot_clicked"]
[connection signal="game_continued" from="UI/Pause Menu" to="." method="_on_pause_menu_game_continued"]
[connection signal="game_exited" from="UI/Pause Menu" to="." method="_on_pause_menu_game_exited"]
